plugins {
    id 'java'
    id 'application'
}

group 'com.tesch'
version '1.0'

sourceCompatibility = '21'
targetCompatibility = '21'

jar {
    classes.dependsOn(clean)

    manifest {
        attributes 'Implementation-Title': 'tesch_discord_bot',
                   'Implementation-Version': project.version,
                   'Main-Class': 'com.tesch.Main'
    }

    duplicatesStrategy = DuplicatesStrategy.INCLUDE

    from {
        configurations.runtimeClasspath.collect {
            it.isDirectory() ? it : zipTree(it) 
        } 
    }
}

task stage(dependsOn: ['build', 'clean'])
build.mustRunAfter clean

startScripts {
    mainClass.set('com.tesch.Main')
}

repositories {
    maven {
        url 'https://maven.lavalink.dev/releases'
    }
    maven {
        url 'https://m2.dv8tion.net/releases'
    }
    maven {
        url 'https://jitpack.io'
    }
    maven {
        url 'https://maven.scijava.org/content/repositories/public/'
    }

    mavenCentral()
}

dependencies {

    implementation 'com.discord4j:discord4j-core:3.2.1'
    implementation 'com.discord4j:discord4j-voice:3.2.1'
    implementation 'dev.arbjerg:lavaplayer:2.2.1'
    implementation 'dev.lavalink.youtube:v2:1.4.0'
    implementation 'com.github.walkyst:JAADec-fork:0.1.3'
    implementation 'net.dv8tion:JDA:5.0.0-beta.6'
    implementation 'org.slf4j:slf4j-api:2.0.6'
    implementation 'org.slf4j:slf4j-simple:2.0.6'
    implementation 'se.michaelthelin.spotify:spotify-web-api-java:8.0.0'
}
